# Foodganizer

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml  tsconfig.json
definitions/: defs.d.ts
foodganizer/: asgi.py  settings.py  urls.py  wsgi.py
website/: admin.py  api_endpoints.py  forms.py  models.py  urls.py  utils.py  views.py
website/migrations/: 0001_initial.py  0002_alter_user_profile_pic.py  0002_auto_20210806_1107.py  0002_auto_20210826_1806.py  0002_postit_last_edited_by.py  0003_auto_20210817_2158.py  0003_auto_20210829_1225.py  0003_auto_20210923_1639.py  0004_alter_membership_status.py  0004_alter_membership_unique_together.py  0005_alter_membership_status.py  0005_membership_invited_by.py  0006_alter_storeditem_expiry_date.py  0007_kitchen_background_image_alter_item_upc.py
website/static/css/: add-item-kitchen.sass  bootstrap-dark.css  card3d.sass  colors.sass  header.sass  index.sass  kitchen.sass  main.sass  overrides.sass  utils.sass
website/static/js/: Card3D.js  GLTFLoader.js  fridge.js
website/templates/: base.html  css-imports.html  csvalidation.html
website/templates/components/: datepicker.html  header.html  invite-friends-to-kitchen.html  invite-users-modal.html  user-kitchens.html
website/templates/pages/: add-item-kitchen.html  index.html  join-shared-kitchen.html  jstest.html  kitchen.html  kitchens.html  new-kitchen-item.html  new-kitchen.html  own_profile.html  profile.html  (+2 more)
website/templatetags/: date_utils.py  jsondumps.py
website/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
(+129 files in other folders)
